# BlueArchive-Starter

./: .gitignore  README.md  log.py  main.py  nuitka_package.sh  package.sh  pyproject.toml  脚本规范.md
BASL/: BASL.md  baslLexer.g4  baslParser.g4  basl_main.py  bas中间语言  default_script.bas  test.bas  test.bas.json  流程.md
BASL/source_files/: Python3Parser.g4
UI/: newui.py  newui.ui
adb/: Interruptions.py  __init__.py  adb_utils.py  script.py  script_parser.py
adb/platform-tools/: NOTICE.txt  dmtracedump  etc1tool  hprof-conv  make_f2fs  make_f2fs_casefold  mke2fs  sqlite3
ocr/: __init__.py  _ocr.py
